--- a/styles/style.css
+++ b/styles/style.css
@@ -3,23 +3,42 @@
     padding: 0;
 }
 body{
-    margin: 0 2%;
+    background-color: beige;
+}
+header{
+    height: 6.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(0, 158, 145);
+    border-bottom: .1875rem solid rgb(0, 54, 50);
+}
+h1{
+    color: beige;
+}
+.cargaAlumno{
+    margin: 2%;
 }
 .cargaAlumno_info{
     height: 3.75rem;
     padding: 1%;
-    border: .1875rem dotted cadetblue;
+    background-color: rgb(112, 194, 187);
+    border: .1875rem solid rgb(0, 54, 50);
 }
 .info{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
+.tablaCarga{
+    margin: 2%;
+}
 #tablaAlumnos{
     height: 3.75rem;
     width: 100%;
     padding: 1%;
-    border: .1875rem dotted cadetblue;
+    background-color: rgb(112, 194, 187);
+    border: .1875rem solid rgb(0, 54, 50);
 }
 td{
     text-align: center;
